force-app/main/default/objects/Incident__c/fields/IncidentDetails__c.field-meta.xml
<CustomField>
    <fullName>IncidentDetails__c</fullName>
    <description>Field used to record the incident details</description>
    <label>Incident Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>