force-app/main/default/objects/Incident__c/validationRules/Incident_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Incident_Details</fullName>
    <active>true</active>
    <description>Valiation rule used to unsure details are provided for the incident</description>
    <errorConditionFormula>AND(ISPICKVAL( Status__c ,&apos;Open&apos;),   ISBLANK(IncidentDetails__c) )</errorConditionFormula>
    <errorDisplayField>IncidentDetails__c</errorDisplayField>
    <errorMessage>Please provide details for the incident you are raising.</errorMessage>
</ValidationRule>