force-app/main/default/objects/Incident__c/validationRules/Resolution_Note.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Note</fullName>
    <active>true</active>
    <description>Validation rule used to ensure a resoluiotn note is populated before closing the incident</description>
    <errorConditionFormula>AND( ISBLANK( ResolutionNote__c) ,
				
				 ISPICKVAL( Status__c ,&apos;Closed&apos;) 
				)</errorConditionFormula>
    <errorDisplayField>ResolutionNote__c</errorDisplayField>
    <errorMessage>Please provide a resolution note before closing the incident.</errorMessage>
</ValidationRule>