force-app/main/default/objects/Incident__c/listViews/Open_Incidents.listView-meta.xml
<ListView>
    <fullName>Open_Incidents</fullName>
    <columns>NAME</columns>
    <columns>Job__c</columns>
    <columns>IncidentDetails__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>All Open Incidents</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>Security_Express_Special_Deliveries</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>StarTrack_Operations_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>